--- a/manifest.json
+++ b/manifest.json
@@ -7,17 +7,17 @@
     "background_color":"#FFDF00",
     "icons":[
         {
-            "src":"./icon/icono.jpg",
+            "src":"./Iconos/hs255.png",
             "sizes":"255x255",
             "type":"image/jpg"
         },
         {
-            "src":"./icon/icono.jpg",
+            "src":"./Iconos/hs192.png",
             "sizes":"192x192",
             "type":"image/jpg"
         },
         {
-            "src":"./icon/icono.jpg",
+            "src":"./Iconos/hs144.png",
             "sizes":"144x144",
             "type":"image/jpg"
         }    
